// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button will a pill shape to match snapshot 1`] = `
<button
  className="plt-20px prt-20px ptp-9px pbm-9px mht-40px phl-20 pvl-9 fse-14px fwt-500 lht-20px lsg--0p01em dy-inline-flex ais-center jct-center wh-fit-content brs-999px tn-background-color-0p2s-ease-border-color-0p2s-ease-opacity-0p2s-ease cror-pointer bcr-var--theme-primary cr-var--color-white bwh-1px bsee-solid bcrr-var--theme-primary oy-0p92--hover oy-0p96--active oe-none--focus-visible bsw-0-0-0-2px-var--var--color-white-0-0-0-4px-var--var--theme-primary--focus-visible"
  disabled={false}
  ref={[Function]}
  type="button"
>
  <div
    className="gp-8px ais-center jct-center fse-14px fwt-500 lht-20px lsg--0p01em wse-nowrap cr-var--color-white dy-flex fdn-row"
    ref={[Function]}
  >
    Pill Shape
  </div>
</button>
`;

exports[`Button with an icon on the left to match snapshot 1`] = `
<button
  className="plt-20px prt-20px ptp-9px pbm-9px mht-40px phl-20 pvl-9 fse-14px fwt-500 lht-20px lsg--0p01em dy-inline-flex ais-center jct-center wh-fit-content brs-999px tn-background-color-0p2s-ease-border-color-0p2s-ease-opacity-0p2s-ease cror-pointer bcr-var--theme-primary cr-var--color-white bwh-1px bsee-solid bcrr-var--theme-primary oy-0p92--hover oy-0p96--active oe-none--focus-visible bsw-0-0-0-2px-var--var--color-white-0-0-0-4px-var--var--theme-primary--focus-visible"
  disabled={false}
  ref={[Function]}
  type="button"
>
  <div
    className="gp-8px ais-center jct-center fse-14px fwt-500 lht-20px lsg--0p01em wse-nowrap cr-var--color-white dy-flex fdn-row"
    ref={[Function]}
  >
    <div
      className="cr-var--color-white"
      ref={[Function]}
    >
      <div
        className="wh-24px ht-24px wht-24 cr-currentColor dy-flex ais-center jct-center tm-rotate0deg"
        ref={[Function]}
      />
    </div>
    Delete
  </div>
</button>
`;

exports[`Button with an icon on the right to match snapshot 1`] = `
<button
  className="plt-20px prt-20px ptp-9px pbm-9px mht-40px phl-20 pvl-9 fse-14px fwt-500 lht-20px lsg--0p01em dy-inline-flex ais-center jct-center wh-fit-content brs-999px tn-background-color-0p2s-ease-border-color-0p2s-ease-opacity-0p2s-ease cror-pointer bcr-var--theme-primary cr-var--color-white bwh-1px bsee-solid bcrr-var--theme-primary oy-0p92--hover oy-0p96--active oe-none--focus-visible bsw-0-0-0-2px-var--var--color-white-0-0-0-4px-var--var--theme-primary--focus-visible"
  disabled={false}
  ref={[Function]}
  type="button"
>
  <div
    className="gp-8px ais-center jct-center fse-14px fwt-500 lht-20px lsg--0p01em wse-nowrap cr-var--color-white dy-flex fdn-row"
    ref={[Function]}
  >
    Delete
    <div
      className="cr-var--color-white"
      ref={[Function]}
    >
      <div
        className="wh-24px ht-24px wht-24 cr-currentColor dy-flex ais-center jct-center tm-rotate0deg"
        ref={[Function]}
      />
    </div>
  </div>
</button>
`;
